# rezumate

./: .env.example  .gitignore  BACKEND_DEPLOYMENT.md  PRO_PLAN.md  README.md  TODO.md  alembic.ini  main.py  plan.md  pyproject.toml  spec.md  theme.md  vercel.json
app/: config.py  database.py
app/routes/: api.py
app/services/: ai_service.py  ats_service.py  auth_service.py  document_service.py  export_service.py  pdf_service.py  schemas.py
app/static/css/: styles.css
app/templates/: base.html
app/templates/pages/: chat.html  compare.html  rank.html  score.html
ios/RezumateNative/: AppConfiguration.swift  AppState.swift  RezumateNativeApp.swift
ios/RezumateNative.xcodeproj/: project.pbxproj
ios/RezumateNative/Models/: APIModels.swift
ios/RezumateNative/Services/: APIClient.swift  ATSScoringService.swift  AppleSignInCoordinator.swift  DocxTextExtractor.swift  KeychainSessionStore.swift  LocalAIService.swift  LocalStorageManager.swift  PDFExportService.swift  PDFTextExtractor.swift
ios/RezumateNative/Views/: AnalyzeView.swift  AuthView.swift  DesignSystem.swift  (+6 more)
migrations/: env.py
migrations/versions/: 20260604_0001_initial.py
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/ios/: Podfile
tests/: test_api_integration.py  test_api_score.py  test_ats_service.py  test_auth_service.py  test_config.py  test_document_service.py  test_export_service.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
(+36 files in other folders)
