[project]
name = "rezumate"
version = "0.1.0"
description = "Resume Analysis Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "langchain-groq==0.2.0",
    "pdfplumber==0.11.4",
    "aiofiles==24.1.0",
    "sqlalchemy==2.0.35",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pydantic==2.9.2",
    "python-docx>=1.2.0",
    "reportlab>=4.5.1",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "cryptography>=42.0.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[tool.uv]
package = false
